--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "goFrendi",
   "license": "MIT",
   "dependencies": {
+    "bluetooth-serial-port": "^2.2.1",
     "body-parser": "^1.17.2",
     "cache-require-paths": "^0.3.0",
     "clone": "^2.1.1",
